--- a/analyze.info.yml
+++ b/analyze.info.yml
@@ -4,4 +4,4 @@ description: 'API for adding information in the Analyze tab of entities'
 core_version_requirement: ^10
 package: Custom
 dependencies:
-  - node:node
+  - drupal:node
