--- a/analyze.services.yml
+++ b/analyze.services.yml
@@ -7,3 +7,7 @@ services:
     arguments: ['@plugin.manager.analyze', '@entity_type.manager']
     tags:
       - { name: event_subscriber }
+  access_check.analyze.analyze_access:
+    class: Drupal\analyze\Access\AnalyzeAccessAccessChecker
+    tags:
+      - { name: access_check, applies_to: _analyze_access }
