--- a/analyze.info.yml
+++ b/analyze.info.yml
@@ -1,7 +1,5 @@
 name: 'Analyze'
 type: module
 description: 'API for adding information in the Analyze tab of entities'
-core_version_requirement: ^10
+core_version_requirement: ^10 | ^11
 package: Custom
-dependencies:
-  - drupal:node
