Gather and display the data, plus tidy up module categories.

--- a/analyze.info.yml
+++ b/analyze.info.yml
@@ -3,4 +3,4 @@ type: module
 description: 'API for adding information in the Analyze tab of entities'
 core_version_requirement: ^10 | ^11
 configure: analyze.analyze_settings
-package: Custom
+package: Analyzer
