--- a/modules/analyze_page_views/analyze_page_views.info.yml
+++ b/modules/analyze_page_views/analyze_page_views.info.yml
@@ -1,7 +1,7 @@
 name: 'Node Views'
 type: module
 description: 'Displays Node Views from Statistics module'
-package: Analyze
+package: Analyzer
 core_version_requirement: ^10 || ^11
 dependencies:
   - drupal:statistics
