--- a/modules/analyze_basic_content_info/analyze_basic_content_info.info.yml
+++ b/modules/analyze_basic_content_info/analyze_basic_content_info.info.yml
@@ -3,3 +3,6 @@ type: module
 description: 'Provides a plugin for analyzing content statistics'
 package: Analyzer
 core_version_requirement: ^10 || ^11
+
+dependencies:
+  - analyze:analyze
