--- a/modules/analyze_page_views/analyze_page_views.info.yml
+++ b/modules/analyze_page_views/analyze_page_views.info.yml
@@ -4,5 +4,6 @@ description: 'Displays Node Views from Statistics module'
 package: Analyzer
 core_version_requirement: ^10 || ^11
 dependencies:
-  - drupal:statistics
+  - analyze:analyze
   - drupal:node
+  - drupal:statistics
