--- a/modules/google_analytics_analyzer/google_analytics_analyzer.info.yml
+++ b/modules/google_analytics_analyzer/google_analytics_analyzer.info.yml
@@ -4,4 +4,5 @@ description: 'Provides a plugin for analyzing Google Analytics data'
 package: Analyzer
 core_version_requirement: ^10 || ^11
 dependencies:
+  - analyze:analyze
   - google_analytics_reports:google_analytics_reports_api
