Add statistics (page views) submodule.

--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,8 @@
     "keywords": ["Drupal"],
     "license": "GPL-2.0+",
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
+    "suggest": {
+      "drupal/statistics": "Replacement for the deprecated core Statistics module, required for the Node Views module."
+    }
 }
