--- a/modules/analyze_google_analytics/config/install/views.view.analyze_google_analytics.yml
+++ b/modules/analyze_google_analytics/config/install/views.view.analyze_google_analytics.yml
@@ -5,6 +5,8 @@ dependencies:
   module:
     - google_analytics_reports
     - user
+_core:
+  default_config_hash: R2hLNjEOg_FSj78CSXik3KJ0uz8zsH6JR-NGPOzNRiI
 id: analyze_google_analytics
 label: 'Analyze Google Analytics'
 module: views
@@ -334,92 +336,11 @@ display:
         groups:
           1: AND
       style:
-        type: table
+        type: default
         options:
           grouping: {  }
           row_class: ''
           default_row_class: true
-          columns:
-            screenPageViews: screenPageViews
-            screenPageViewsPerSession: screenPageViewsPerSession
-            screenPageViewsPerUser: screenPageViewsPerUser
-            city: city
-            bounceRate: bounceRate
-            percentScrolled: percentScrolled
-            landingPage: landingPage
-            unifiedPagePathScreen: unifiedPagePathScreen
-            pageReferrer: pageReferrer
-          default: '-1'
-          info:
-            screenPageViews:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            screenPageViewsPerSession:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            screenPageViewsPerUser:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            city:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            bounceRate:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            percentScrolled:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            landingPage:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            unifiedPagePathScreen:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            pageReferrer:
-              sortable: false
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-          override: true
-          sticky: false
-          summary: ''
-          empty_table: false
-          caption: ''
-          description: ''
       row:
         type: fields
       query:
@@ -885,8 +806,100 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
+      style:
+        type: table
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          columns:
+            screenPageViews: screenPageViews
+            screenPageViewsPerSession: screenPageViewsPerSession
+            screenPageViewsPerUser: screenPageViewsPerUser
+            city: city
+            bounceRate: bounceRate
+            percentScrolled: percentScrolled
+            landingPage: landingPage
+            unifiedPagePathScreen: unifiedPagePathScreen
+            pageReferrer: pageReferrer
+          default: '-1'
+          info:
+            screenPageViews:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            screenPageViewsPerSession:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            screenPageViewsPerUser:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            city:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            bounceRate:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            percentScrolled:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            landingPage:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            unifiedPagePathScreen:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+            pageReferrer:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
+          override: true
+          sticky: false
+          summary: ''
+          empty_table: false
+          caption: ''
+          description: ''
+      row:
+        type: fields
+        options: {  }
       defaults:
         title: false
+        style: false
+        row: false
         fields: false
       display_extenders: {  }
     cache_metadata:
