--- a/modules/analyze_plugin_example/analyze_plugin_example.info.yml
+++ b/modules/analyze_plugin_example/analyze_plugin_example.info.yml
@@ -3,6 +3,6 @@ type: module
 description: 'Example code for providing your own Analyze plugin.'
 package: Example
 core_version_requirement: ^10.3 || ^11
-hidden: true
+hidden: false
 dependencies:
   - analyze:analyze
