--- a/modules/analyze_hello_world/analyze_hello_world.info.yml
+++ b/modules/analyze_hello_world/analyze_hello_world.info.yml
@@ -1,7 +1,9 @@
-name: Analyze Hello World
+name: 'Analyze Hello World'
 type: module
 description: 'A simple hello world submodule for Analyze that responds to AI chat queries.'
 package: Analyze
-core_version_requirement: ^9 || ^10
+core_version_requirement: ^10
 dependencies:
-  - analyze:analyze 
+  - analyze:analyze
+  - ai:ai
+configure: analyze_hello_world.settings 
