--- a/modules/analyze_ai_sentiment/analyze_ai_sentiment.links.menu.yml
+++ b/modules/analyze_ai_sentiment/analyze_ai_sentiment.links.menu.yml
@@ -1,6 +1,6 @@
-analyze_hello_world.settings:
+analyze_ai_sentiment.settings:
   title: 'Sentiment Analysis'
   description: 'Configure sentiment analysis metrics and labels'
   parent: system.admin_config_analyze
-  route_name: analyze_hello_world.settings
+  route_name: analyze_ai_sentiment.settings
   weight: 0 
